--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
   
   .fakeimg {
     background-color: #aaa;
-    width: 80%;
+    width: 40%;
     padding: 20px;
   }
   
@@ -45,6 +45,34 @@ body {
     text-align: center;
     background: #ddd;
     margin-top: 20px;
+  }
+
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+  
+  .fa-pinterest {
+    background: #cb2027;
+    color: white;
+  }
+
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
   }
 
   @media screen and (max-width: 800px) {
