--- a/index.css
+++ b/index.css
@@ -13,14 +13,23 @@ body {
   
   .leftcolumn {
     float: left;
-    width: 75%;
+    width: 65%;
   }
   
   .rightcolumn {
-    float: left;
+    float: right;
     width: 25%;
     padding-left: 20px;
   }
+  .myImage {
+    width: 100%;
+    height: 100%;
+ }
+ 
+  /* div .myImage {
+    display: block;
+    width: 100%;
+ } */
   
   .fakeimg {
     background-color: #aaa;
@@ -48,30 +57,31 @@ body {
   }
 
   .fa {
-    padding: 20px;
+    padding: 10px;
     font-size: 30px;
-    width: 50px;
+    width: 20px;
     text-align: center;
     text-decoration: none;
-    margin: 5px 2px;
+    /* margin: 5px 2px; */
+    border-radius: 50%;
   }
-  
   .fa:hover {
       opacity: 0.7;
   }
-
   .fa-instagram {
     background: #125688;
     color: white;
   }
-  
   .fa-pinterest {
     background: #cb2027;
     color: white;
   }
-
   .fa-twitter {
     background: #55ACEE;
+    color: white;
+  }
+  .fa-linkedin {
+    background: #007bb5;
     color: white;
   }
 
